sampler/chain/libgdx/selected.txt
/home/nima/Developer/AutoFixer/Evaluation/Projects/libgdx/gdx/src/com/badlogic/gdx/graphics/g3d/utils/shapebuilders/BoxShapeBuilder.java:81: error: [NullAway] (INDEX= 860) (Covered) passing @Nullable parameter 'null' where @NonNull is required
				vertTmp7.set(corner101, null, null, null), vertTmp8.set(corner111, null, null, null));
				                                                                   ^
/home/nima/Developer/AutoFixer/Evaluation/Projects/libgdx/gdx/src/com/badlogic/gdx/graphics/Mesh.java:927: error: [NullAway] (INDEX= 164) (Covered) passing @Nullable parameter 'null' where @NonNull is required
		return calculateRadius(center.x, center.y, center.z, offset, count, null);
		                                                                    ^
/home/nima/Developer/AutoFixer/Evaluation/Projects/libgdx/gdx/src/com/badlogic/gdx/graphics/g3d/model/data/ModelNodePart.java:26: error: [NullAway] (INDEX= 131) (Covered) @NonNull field meshPartId not initialized
	public String meshPartId;
	              ^
/home/nima/Developer/AutoFixer/Evaluation/Projects/libgdx/gdx/src/com/badlogic/gdx/scenes/scene2d/Action.java:29: error: [NullAway] (INDEX= 472) (Covered) @NonNull field actor not initialized
	protected Actor actor;
	                ^
/home/nima/Developer/AutoFixer/Evaluation/Projects/libgdx/gdx/src/com/badlogic/gdx/graphics/g3d/particles/influencers/SimpleInfluencer.java:35: error: [NullAway] (INDEX= 612) (Covered) initializer method does not guarantee @NonNull fields valueChannel (line 32), interpolationChannel (line 32), lifeChannel (line 32), valueChannelDescriptor (line 33) are initialized along all control-flow paths (remember to check for exceptions or early returns).
	public SimpleInfluencer () {
	       ^
